refactor: adiciona roles